# mvp_sneakers_service

./: .env.example  .gitignore  Makefile  README.md  Untitled_MVP_model.ipynb  docker-compose.dev.yml  docker-compose.metrics.yml  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: sneakers_mvp.yml
Configs/nginx/conf.d/: web.conf
Dockerfiles/React/: Dockerfile
Dockerfiles/app/: Dockerfile
app/: __init__.py
app/services/: models_getters.py
app/settings/: celery_config.py  settings.py
data/: .gitignore  data_test.dvc  models.dvc
data/test/: .gitignore  test.xml.dvc  test_data.xml.dvc
frontend/: docker-compose.dev.yml  docker-compose.yml
frontend/front-react/: package-lock.json
frontend/front-react/src/: App.js  FileUpload.css  ImageUploadForm.js
mvp_sneakers_api/: __init__.py  __main__.py
mvp_sneakers_api/api/v1/: classificator.py  efficientnet.py
mvp_sneakers_api/models/: efficientnet.py
mvp_sneakers_api/services/: base_inference.py  celery.py  efficientnet_inference.py  inference_model_loader.py  model_inference.py
mvp_sneakers_api/settings/: celery_config.py  logger.py  settings.py
mvp_sneakers_api/tasks/: task.py
research/: EfficientNet_krosi.ipynb
research /: MVP презентация сервиса по поиску похожих кроссовок.pptx  Untitled_MVP_model.ipynb
tests/test_e2e/: conftest.py  test_dummy.py  test_model_inference.py
